Added an empty element for our scaffold, removed the default elements.

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,2 +1,1 @@
-<link rel="import" href="yo-list/yo-list.html">
-<link rel="import" href="yo-greeting/yo-greeting.html">
+<link rel="import" href="twitchteam-scaffold/twitchteam-scaffold.html">
