--- a/app/index.html
+++ b/app/index.html
@@ -21,11 +21,9 @@
 
 <body unresolved>
 
-  <div class="hero-unit">
-    <yo-greeting></yo-greeting>
-    <p>You now have</p>
-    <yo-list></yo-list>
-  </div>
+  <twitchteam-scaffold>
+
+  </twitchteam-scaffold>
 
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
