Added ThingModel, and the sampler-scaffold element from Polymer, which will be modified.

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,1 +1,3 @@
 <link rel="import" href="twitchteam-scaffold/twitchteam-scaffold.html">
+<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
