--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,11 @@
 
 <body unresolved>
 
-  <twitchteam-scaffold>
+  <twitchteam-scaffold label="Team Dissidence">
+    <paper-icon-button class="menuButton" icon="menu" ></paper-icon-button>
+    <paper-fab class="sourceButton bottom" icon="launch"></paper-fab>
 
+    <core-item label="Perdu" tag="perdu" url="http://www.perdu.com/"></core-item>
   </twitchteam-scaffold>
 
   <!-- build:js scripts/app.js -->
