Tuning theme, preparing for the upcoming elements

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,3 +1,6 @@
 <link rel="import" href="twitchteam-scaffold/twitchteam-scaffold.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="twitchteam-stream\twitchteam-stream.html">
+<link rel="import" href="twitchteam-chat\twitchteam-chat.html">
+<link rel="import" href="twitchteam-broadcaster\twitchteam-broadcaster.html">
