--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Polymer WebApp</title>
+  <title>Dissidence</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -21,11 +21,14 @@
 
 <body unresolved>
 
-  <twitchteam-scaffold label="Team Dissidence">
+  <twitchteam-scaffold label="Dissidence">
     <paper-icon-button class="menuButton" icon="menu" ></paper-icon-button>
     <paper-fab class="sourceButton bottom" icon="launch"></paper-fab>
 
-    <core-item label="Perdu" tag="perdu" url="http://www.perdu.com/"></core-item>
+    <core-item label="Fmaunier" tag="fmaunier"></core-item>
+    <core-item label="EvilDuckk" tag="evilduckk"></core-item>
+    <core-item label="hvqoi" tag="hvqoi"></core-item>
+    <core-item label="DoctorPepperFox" tag="doctorpepperfox"></core-item>
   </twitchteam-scaffold>
 
   <!-- build:js scripts/app.js -->
