Added a custom icon set

--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,12 @@
 
   <twitchteam-scaffold label="Dissidence">
     <paper-icon-button class="menuButton" icon="menu" ></paper-icon-button>
-    <paper-fab class="sourceButton bottom" icon="launch"></paper-fab>
+    <paper-fab class="sourceButton bottom" icon="twitchteam:twitch"></paper-fab>
 
-    <core-item label="Fmaunier" tag="fmaunier"></core-item>
-    <core-item label="EvilDuckk" tag="evilduckk"></core-item>
-    <core-item label="hvqoi" tag="hvqoi"></core-item>
-    <core-item label="DoctorPepperFox" tag="doctorpepperfox"></core-item>
+    <paper-item icon="check-circle-blank" label="Fmaunier" tag="fmaunier"></paper-item>
+    <paper-item label="EvilDuckk" tag="evilduckk"></paper-item>
+    <paper-item label="hvqoi" tag="hvqoi"></paper-item>
+    <paper-item label="DoctorPepperFox" tag="doctorpepperfox"></paper-item>
   </twitchteam-scaffold>
 
   <!-- build:js scripts/app.js -->
