--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,3 +1,5 @@
+<link rel="import" href="twitchteam-iconset/twitchteam-iconset.html">
 <link rel="import" href="twitchteam-scaffold/twitchteam-scaffold.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
