--- a/app/index.html
+++ b/app/index.html
@@ -25,10 +25,10 @@
     <paper-icon-button class="menuButton" icon="menu" ></paper-icon-button>
     <paper-fab class="sourceButton bottom" icon="twitchteam:twitch"></paper-fab>
 
-    <paper-item icon="check-circle-blank" label="Fmaunier" tag="fmaunier"></paper-item>
-    <paper-item label="EvilDuckk" tag="evilduckk"></paper-item>
-    <paper-item label="hvqoi" tag="hvqoi"></paper-item>
-    <paper-item label="DoctorPepperFox" tag="doctorpepperfox"></paper-item>
+    <twitchteam-broadcaster broadcaster="fmaunier"></twitchteam-broadcaster>
+    <twitchteam-broadcaster broadcaster="evilduckk"></twitchteam-broadcaster>
+    <twitchteam-broadcaster broadcaster="hvqoi"></twitchteam-broadcaster>
+    <twitchteam-broadcaster broadcaster="doctorpepperfox"></twitchteam-broadcaster>
   </twitchteam-scaffold>
 
   <!-- build:js scripts/app.js -->
