--- a/app/elements/twitchteam-broadcaster/twitchteam-broadcaster.html
+++ b/app/elements/twitchteam-broadcaster/twitchteam-broadcaster.html
@@ -1,15 +1,60 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/core-icon/core-icon.html">
+<link rel="import" href="../../bower_components/core-icons/social-icons.html">
+<link rel="import" href="../../bower_components/paper-ripple/paper-ripple.html">
 
-<polymer-element name="twitchteam-broadcaster" attributes="">
+<link href="twitchteam-broadcaster.css" rel="stylesheet">
+
+<polymer-element name="twitchteam-broadcaster" attributes="broadcaster" center horizontal layout>
+
   <template>
-    <link rel="stylesheet" href="twitchteam-broadcaster.css">
+    <paper-ripple id="ripple"></paper-ripple>
+
+    <img id="avatar" src="{{avatar}}" self-start/>
+    <div id="infos" self-start vertical around-justified layout center>
+      <div id="broadcasterName">{{displayName}}</div>
+      <div id="game">playing {{game}}</div>
+      <div id="status">{{status}}</div>
+    </div>
+    <div id="live" live?="{{live}}" horizontal justified layout center>
+      <div>{{live ? 'LIVE' : 'OFFLINE'}}</div>
+      <div flex></div>
+      <core-icon icon="social:person" style="color: #b71c1c;"></core-icon>
+      <div class="count">{{viewers}}</div>
+      <core-icon icon="visibility"></core-icon>
+      <div class="count">{{views}}</div>
+      <core-icon icon="favorite"></core-icon>
+      <div class="count">{{followers}}</div>
+    </div>
   </template>
+
   <script>
     (function () {
       'use strict';
 
       Polymer({
-        // define element prototype here
+        avatar: 'http://static-cdn.jtvnw.net/jtv_user_pictures/fmaunier-profile_image-80afe6408e865a9b-300x300.png',
+        broadcaster: '',
+        displayName: 'Jean-Roger',
+        followers: '504',
+        game: 'Ittle Dew',
+        live: true,
+        status: '[FR/EN] Ittle Dew Any% Speedruns',
+        viewers: '25',
+        views: '15300',
+
+        eventDelegates: {
+          'down': 'downAction',
+          'up': 'upAction'
+        },
+
+        downAction: function(e) {
+          this.$.ripple.downAction(e);
+        },
+
+        upAction: function(e) {
+          this.$.ripple.upAction(e);
+        },
       });
 
     })();
