Fixing some JS, and switching to minified versions of scripts.

--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,10 @@
   <!-- endbuild-->
 
   <script src="bower_components/platform/platform.js"></script>
-  <script src="bower_components/bytebuffer/dist/ByteBufferAB.js"></script>
-  <script src="bower_components/protobuf/dist/ProtoBuf.js"></script>
-  <script src="bower_components/lodash/dist/lodash.js"></script>
-  <script src="bower_components/ThingModel/TypeScript/build/ThingModel.js"></script>
+  <script src="bower_components/bytebuffer/dist/ByteBufferAB.min.js"></script>
+  <script src="bower_components/protobuf/dist/ProtoBuf.min.js"></script>
+  <script src="bower_components/lodash/dist/lodash.min.js"></script>
+  <script src="bower_components/ThingModel/TypeScript/build/ThingModel.min.js"></script>
   <!-- build:vulcanized elements/elements.vulcanized.html -->
   <link rel="import" href="elements/elements.html">
   <!-- endbuild-->
