--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,10 @@
   <script src="bower_components/ThingModel/TypeScript/build/ThingModel.min.js"></script>
   <script src="bower_components/web-animations-js/web-animations.js"></script>
 
+  <!-- build:js scripts/config.js -->
+  <script src="scripts/config.js"></script>
+  <!-- endbuild-->
+
   <!-- build:vulcanized elements/elements.vulcanized.html -->
   <link rel="import" href="elements/elements.html">
   <!-- endbuild-->
