--- a/app/index.html
+++ b/app/index.html
@@ -13,12 +13,14 @@
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild-->
 
+  <!-- build:js scripts/libraries.js -->
   <script src="bower_components/platform/platform.js"></script>
-  <script src="bower_components/bytebuffer/dist/ByteBufferAB.min.js"></script>
-  <script src="bower_components/protobuf/dist/ProtoBuf.min.js"></script>
-  <script src="bower_components/lodash/dist/lodash.min.js"></script>
-  <script src="bower_components/ThingModel/TypeScript/build/ThingModel.min.js"></script>
+  <script src="bower_components/bytebuffer/dist/ByteBufferAB.js"></script>
+  <script src="bower_components/protobuf/dist/ProtoBuf.js"></script>
+  <script src="bower_components/lodash/dist/lodash.js"></script>
+  <script src="bower_components/ThingModel/TypeScript/build/ThingModel.js"></script>
   <script src="bower_components/web-animations-js/web-animations.js"></script>
+  <!-- endbuild -->
 
   <!-- build:js scripts/config.js -->
   <script src="scripts/config.js"></script>
