--- a/app/elements/twitchteam-scaffold/twitchteam-scaffold.html
+++ b/app/elements/twitchteam-scaffold/twitchteam-scaffold.html
@@ -28,7 +28,7 @@
               <iframe id="streamFrame" src="//www.twitch.tv/{{item.broadcaster}}/embed" frameborder="0" scrolling="no"></iframe>
             </div>
             <div id="chatContainer" flex?="{{narrow}}">
-              <iframe id="chatFrame" src="http://www.twitch.tv/{{item.broadcaster}}/chat?popout=" frameborder="0" scrolling="no"></iframe>
+              <iframe id="chatFrame" src="//www.twitch.tv/{{item.broadcaster}}/chat?popout=" frameborder="0" scrolling="no"></iframe>
             </div>
           </div>
         </div>
