--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,10 @@
   <script src="bower_components/lodash/dist/lodash.js"></script>
   <script src="bower_components/ThingModel/TypeScript/build/ThingModel.js"></script>
   <script src="bower_components/web-animations-js/web-animations.js"></script>
+  <script src="bower_components/zepto/zepto.js"></script>
   <!-- endbuild -->
+
+  <script src="//ttv-api.s3.amazonaws.com/twitch.min.js"></script>
 
   <!-- build:js scripts/config.js -->
   <script src="scripts/config.js"></script>
