--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
   <script src="bower_components/zeptojs/src/deferred.js"></script>
   <!-- endbuild -->
 
-  <script src="//ttv-api.s3.amazonaws.com/twitch.min.js"></script>
+  <script src="//cdn.rawgit.com/justintv/twitch-js-sdk/master/twitch.min.js"></script>
 
   <!-- build:js scripts/config.js -->
   <script src="scripts/config.js"></script>
