Updating Polymer to 0.5 before 0.8.

--- a/app/index.html
+++ b/app/index.html
@@ -14,12 +14,12 @@
   <!-- endbuild-->
 
   <!-- build:js scripts/libraries.js -->
-  <script src="bower_components/platform/platform.js"></script>
+  <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="bower_components/bytebuffer/dist/ByteBufferAB.js"></script>
   <script src="bower_components/protobuf/dist/ProtoBuf.js"></script>
   <script src="bower_components/lodash/dist/lodash.js"></script>
   <script src="bower_components/ThingModel/TypeScript/build/ThingModel.js"></script>
-  <script src="bower_components/web-animations-js/web-animations.js"></script>
+  <script src="bower_components/web-animations-js/web-animations.dev.js"></script>
   <script src="bower_components/zeptojs/src/zepto.js"></script>
   <script src="bower_components/zeptojs/src/event.js"></script>
   <script src="bower_components/zeptojs/src/ajax.js"></script>
